--- a/android/build.gradle
+++ b/android/build.gradle
@@ -133,7 +133,9 @@ dependencies {
     //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-// From node_modules
+  implementation 'com.google.zxing:core:3.5.0'
+  implementation 'androidx.appcompat:appcompat:1.4.1'
+  implementation "androidx.constraintlayout:constraintlayout:2.1.2"
 }
 
 if (isNewArchitectureEnabled()) {
