--- a/example/package.json
+++ b/example/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "watchman shutdown-server && react-native start --reset-cache",
     "pods": "pod-install --quiet",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package && npx pod-install ios --repo-update && npx jetify"
   },
   "dependencies": {
     "react": "17.0.2",
