--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-pdf417",
-  "version": "0.1.0",
-  "description": "test",
+  "version": "1.0.0",
+  "description": "React-Native library which allows you to generate a barcode in pdf417 format",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
