--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "react-native-pdf417": ["./src/index"]
+      "@reeq/react-native-pdf417": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
